third_party/blink/renderer/core/css/properties/longhands/scroll_padding_block_end_custom.cc
@@ -18,7 +18,7 @@ const CSSValue* ScrollPaddingBlockEnd::ParseSingleValue(
     const CSSParserLocalContext&) const {
   return ConsumeLengthOrPercent(
       range, context.Mode(), kValueRangeNonNegative,
-      CSSPropertyParserHelpers::UnitlessQuirk::kAllow);
+      CSSPropertyParserHelpers::UnitlessQuirk::kForbid);
 }
 
 }  // namespace CSSLonghand
