third_party/blink/renderer/core/css/properties/longhands/scroll_padding_inline_end_custom.cc
@@ -19,7 +19,7 @@ const CSSValue* ScrollPaddingInlineEnd::ParseSingleValue(
     const CSSParserLocalContext&) const {
   return ConsumeLengthOrPercent(
       range, context.Mode(), kValueRangeNonNegative,
-      CSSPropertyParserHelpers::UnitlessQuirk::kAllow);
+      CSSPropertyParserHelpers::UnitlessQuirk::kForbid);
 }
 
 }  // namespace CSSLonghand
