third_party/blink/renderer/core/css/properties/longhands/scroll_padding_right_custom.cc
@@ -18,7 +18,7 @@ const CSSValue* ScrollPaddingRight::ParseSingleValue(
     const CSSParserLocalContext&) const {
   return ConsumeLengthOrPercent(
       range, context.Mode(), kValueRangeNonNegative,
-      CSSPropertyParserHelpers::UnitlessQuirk::kAllow);
+      CSSPropertyParserHelpers::UnitlessQuirk::kForbid);
 }
 
 const CSSValue* ScrollPaddingRight::CSSValueFromComputedStyleInternal(
